<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/imageStatusInternetConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/status_internet_connection_is_out"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textStatusInternetConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/status_internet_connection_is_out"
        app:layout_constraintBottom_toBottomOf="@id/imageStatusInternetConnection"
        app:layout_constraintStart_toEndOf="@id/imageStatusInternetConnection" />

    <FrameLayout
        android:id="@+id/frameUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/vector1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/vec_1" />

        <ImageView
            android:id="@+id/vector2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/vec_2" />

        <ImageView
            android:id="@+id/vector3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/vec_3" />

        <ImageView
            android:id="@+id/vector4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/vec_4" />

        <ImageView
            android:id="@+id/silhouette"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:src="@drawable/image_sihlouette"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>

    <TextView
        android:id="@+id/textViewAuthentication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/monument_extended_ultrabold"
        android:gravity="center"
        android:text="@string/authentication"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameUser" />

    <TextView
        android:id="@+id/text_login_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/textViewExplanation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"/>


    <TextView
        android:id="@+id/textViewExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/explanation"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAuthentication"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginTextInputLayout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewExplanation">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/login"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/frame_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword">

        <ImageButton
            android:id="@+id/buttonLogin"
            android:layout_width="166dp"
            android:layout_height="52dp"
            android:background="@drawable/custom_gradient"
            android:foregroundGravity="center"
            app:tint="@color/black" />

        <TextView
            android:layout_width="166dp"
            android:layout_height="52dp"
            android:fontFamily="@font/monument_extended_ultrabold"
            android:gravity="center"
            android:text="@string/come_in"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_button_fast_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_button_login">

        <ImageButton
            android:id="@+id/button_fast_login"
            android:layout_width="166dp"
            android:layout_height="52dp"
            android:background="@drawable/custom_gradient"
            android:foregroundGravity="center"
            app:tint="@color/black" />

        <TextView
            android:layout_width="166dp"
            android:layout_height="52dp"
            android:fontFamily="@font/monument_extended_ultrabold"
            android:gravity="center"
            android:text="@string/come_in_NFC"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAuthentication"
        />


</androidx.constraintlayout.widget.ConstraintLayout>